[tool.poetry]
name = "dx"
version = "1.2.0"
description = "Python wrapper for Data Explorer"
authors = ["Dave Shoup <dave.shoup@gmail.com>", "Kyle Kelley <rgbkrk@gmail.com>"]
readme = "README.md"
license = "BSD"
homepage = "https://app.noteable.io/"
repository = "https://github.com/noteable-io/dx"
keywords = ["data", "exploration", "visualization"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
ipython = ">=7.31.1"
pydantic = "^1.9.1"
pyarrow = "^8.0.0"
SQLAlchemy = "^1.4.40"
geopandas = { version = "^0.11.1", optional = true}
structlog = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^4.0.1"

[tool.poetry.extras]
geopandas = ["geopandas"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
