[tool.poetry]
name = "dx"
version = "1.2.0"
description = "Python wrapper for Data Explorer"
authors = ["Dave Shoup <dave.shoup@gmail.com>", "Kyle Kelley <rgbkrk@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://app.noteable.io/"
repository = "https://github.com/noteable-io/dx"
keywords = ["data", "exploration", "visualization"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
ipython = ">=7.31.1"
pydantic = "^1.9.1"
structlog = "^22.1.0"
SQLAlchemy = "^1.4.40"
mkdocs = {version = "^1.3.1", optional = true}
mkdocs-material = {version = "^8.3.9", optional = true}
mkdocs-jupyter = {version = ">=0.21,<0.23", optional = true}
mkdocstrings = {version = "^0.19.0", optional = true}
mkdocstrings-python = {version = "^0.7.1", optional = true}
duckdb = "^0.5.1"
duckdb-engine = "^0.6.4"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
nox = "^2022.8.7"
nox-poetry = "^1.0.0"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
# for datatype testing
Faker = "^15.1.0"
geopandas = "^0.11.1"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocs-jupyter", "mkdocstrings", "mkdocstrings-python"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.coverage.run]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = ["if self.debug:",
                 "pragma: no cover",
                 "raise AssertionError",
                 "raise NotImplementedError",
                 "if __name__ == '__main__':"]
ignore_errors = true
omit = []
